# python-web

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/todo-app/: Dockerfile  requirements.txt  rxconfig.py
apps/todo-app/todo_app/: __init__.py  components.py  database.py  models.py  state.py  todo_app.py
apps/weather-app/: Dockerfile  requirements.txt  rxconfig.py
apps/weather-app/weather_app/: __init__.py  components.py  database.py  models.py  state.py  weather_app.py  weather_service.py
scripts/: deploy.sh
tools/: dev.py
